# MLhousingPrices

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
MLhousingPrices/: app.py  model.py  preprocessor.py
MLhousingPrices/resources/: demo.ipynb  exploratory_analysis.ipynb  lr_0.pkl  model_knn_01.pkl  preprocessor_0.pkl  xgb_tuned.pkl
tests/: test_load.py
