[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MLhousingPrices"
version = "3.0.0"
authors = [
  { name="Stéphane Gibon Clément", email="stef3594@gmail.com" },
]
description = "ML package to analyse housing price data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
